@@ -254,7 +254,7 @@ fill_lan_msg_hdr (uint8_t net_fn,
 		  uint8_t rq_seq, 
 		  fiid_obj_t obj_msg)
 {
-  if ((net_fn > IPMI_NET_FN_TRANSPORT_RS)
+  if (!IPMI_NET_FN_VALID(net_fn)
       || (rs_lun > IPMI_BMC_IPMB_LUN_OEM_LUN2)
       || (rq_seq > IPMI_LAN_SEQ_NUM_MAX)
       || (obj_msg == NULL))
@@ -1755,7 +1755,9 @@ ipmi_lan_check_net_fn (fiid_template_t tmpl_msg_hdr,
 {
   uint64_t net_fn_recv;
 
-  if (!(obj_msg_hdr && tmpl_msg_hdr))
+  if (!(obj_msg_hdr 
+        && tmpl_msg_hdr 
+        && IPMI_NET_FN_VALID(net_fn)))
     {
       errno = EINVAL;
       return (-1);
