@@ -53,6 +53,10 @@ extern "C" {
    0x30 to 0x3F IPMI_NET_FN_CNTRLR_OEM_GRP
 */
 
+#define IPMI_NET_FN_VALID(__net_fn) \
+        (((__net_fn) >= IPMI_NET_FN_CHASSIS_RQ \
+          && (__net_fn) <= IPMI_NET_FN_TRANSPORT_RS) ? 1 : 0)
+
 typedef struct net_fn
 {
   uint8_t lun:2;
